fixed color-code box alignment within panel

--- a/colours/index.css
+++ b/colours/index.css
@@ -20,21 +20,23 @@ button {
 }
 
 .container {
-  display: grid;
+  display: inline-grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   width: 100vw;
   height: 90vh;
 }
 
+.panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .color-code {
-  text-align: center;
   text-transform: uppercase;
-  width: 20%;
   background-color: #fff;
   color: #000;
   border-radius: 5px;
-  margin: 25% auto 0;
-  /* transform: translateY(-50%); */
   padding: 1rem 1.5rem;
 }
